# va-ai-api-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: README.md  architecture-and-ir.md  provider-integration-guide.md  sdk-guide.md
docs/concepts/: architecture.md  media-content.md  streaming.md  universal-ir.md
docs/guides/: getting-started.md  host-integration.md  provider-adapters.md
docs/reference/: protocols.md  provider-catalog.md  provider-notes.md
examples/: live_smoke.rs  media_policy.rs  media_policy_typed.rs  provider_adapter.rs  stream_events.rs  translate_request.rs
src/: adapter.rs  codec.rs  error.rs  lib.rs  media.rs  protocol.rs  stream.rs  translator.rs  universal.rs
src/providers/: dashscope.rs  deepseek.rs  kimi.rs  mimo.rs  minimax.rs  mod.rs  reasoning_blob.rs  xai.rs  zai.rs
src/providers/deepseek/: anthropic_order.rs  mod.rs  reasoning.rs  tests.rs  tool_history.rs
src/providers/minimax/: mod.rs  request.rs  tests.rs  think_tags.rs
src/schema/: anthropic.rs  catalog.rs  mod.rs  openai.rs
src/translator/: anthropic.rs  anthropic_messages.rs  common.rs  gemini_generate_content.rs  mod.rs  openai.rs  openai_chat.rs  openai_responses.rs
src/translator/anthropic/: content.rs  reasoning.rs  tools.rs
src/translator/anthropic_messages/: request.rs  response.rs  stream.rs
src/translator/common/: events.rs
src/translator/gemini_generate_content/: request.rs  response.rs  shared.rs  stream.rs  tests.rs
src/universal/: events.rs  mod.rs  model.rs
tests/: golden_translators.rs
(+54 files in other folders)
