[package]
name = "va-ai-api-proxy"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Protocol translation primitives for AI API request and response shapes."
license = "MIT"
repository = "https://github.com/jazzenchen/va-ai-api-proxy"
readme = "README.md"
keywords = ["ai", "api", "proxy", "openai", "anthropic"]
categories = ["api-bindings", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
