[package]
name = "va-ai-api-bridge"
version = "0.1.5"
edition = "2021"
rust-version = "1.82"
description = "Protocol translation primitives for AI API request and response shapes."
license = "MIT"
repository = "https://github.com/jazzenchen/va-ai-api-bridge"
readme = "README.md"
keywords = ["ai", "api", "bridge", "openai", "anthropic"]
categories = ["api-bindings", "data-structures"]

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
